--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -18,8 +18,12 @@
     "strict": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
-    "noFallthroughCasesInSwitch": true
+    "noFallthroughCasesInSwitch": true,
+    "noImplicitAny": false
   },
-  "include": ["src/**/*.ts", "src/**/*.tsx", "src/**/*.vue"],
+  "vueCompilerOptions": {
+    "target": 2
+},
+  "include": ["src/**/*.ts", "src/**/*.tsx", "src/services/middleware.js"],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
